ANTARCTICLE-193 "Find" button is not aligned to the search field Fixed css styles

--- a/app/assets/stylesheets/styles.less
+++ b/app/assets/stylesheets/styles.less
@@ -206,16 +206,9 @@ pre, code {
  * ARTICLES
  ***********************************************/
 .tag-search{
-  display: inline-block;
-  div {
-    display: inline-block;
-  }
   input {
     margin-left: 70px;
     width: 200px;
-  }
-  button {
-    margin-bottom: 2px;
   }
 }
 
